--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -90,7 +90,7 @@
                                         value="#{LoginForm.login}">
                                         <f:passThroughAttribute
                                             name="placeholder"
-                                            value="#{msgs.login}" />
+                                            value="" />
                                     </x:inputText>
                                     <div id="loginHelp" class="form-text">Help text (visible when clicking help button in the upper right corner)</div>
                                 </div>
@@ -114,7 +114,7 @@
                                         value="#{LoginForm.passwort}">
                                         <f:passThroughAttribute
                                             name="placeholder"
-                                            value="#{msgs.passwort}" />
+                                            value="" />
                                     </x:inputSecret>
                                     <div id="passwortHelp" class="form-text">Help text (visible when clicking help button in the upper right corner)</div>
                                 </div>
