Add icons and style

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -20,15 +20,19 @@
             <div>Landesbibliothek Berlin</div>
         </div>
     </div>
+
     <div class="actions">
         <div class="actions__help">
+        <ui:include src="/uii/includes/icon-help.xhtml" />
             Hilfe
         </div>
         <div class="actions__lang">
+			      <ui:include src="/uii/includes/icon-language.xhtml" />
             Language
         </div>
         <div class="actions__user">
-            User
+            User Name
+			      <ui:include src="/uii/includes/icon-logo-intranda.xhtml" />
         </div>
     </div>
 </header>
