--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -23,8 +23,11 @@
                 <a href="index.xhtml">
                     <h:outputText
                         escape="false"
-                        value="#{HelperForm.applicationHeaderTitle}" />
+                        value="ZLB E-Pflicht" />
                 </a>
+
+			          <ui:include src="../includes/icon-logo-goobi.xhtml" />
+
             </h1>
 
                 <div
