--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/index.css
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/index.css
@@ -79,7 +79,8 @@ header {
 
 .actions {
   display: flex;
-  gap: 8px;
+  gap: 32px;
+  align-items: center;
 }
 .actions__help {
 
@@ -90,8 +91,11 @@ header {
 }
 
 .actions__user {
-
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
+
 main {
   display: flex;
   align-items: center;
@@ -100,15 +104,26 @@ main {
 }
 
 main h1 {
-  margin-top: 16px;
-  margin-bottom: 32px;
+  display: flex;
+  justify-content: center;
+  padding-left: 8rem;
+  padding-right: 8rem;
   padding-top: 16px;
   padding-bottom: 40px;
+  margin-top: 16px;
+  margin-bottom: 32px;
 
   border-bottom: 1px solid var(--clr-neutral-600);
   width: 100%;
-  text-align: center;
   text-transform: uppercase;
+}
+
+main h1 a {
+  margin-left: auto;
+}
+
+main h1 svg {
+  margin-left: auto;
 }
 
 .login-body {
